# asyncio-kafka-grpc

./: README.md  docker-compose.yaml
protos/: Makefile  pyproject.toml
protos/kafkacomms/: producer.proto
python/apps/consumer/: README.md  main.py  pyproject.toml
python/apps/consumer/consumer/: kafka.py  service.py
python/apps/producer/: Makefile  README.md  main.py  pyproject.toml
python/apps/producer/producer/: exceptions.py  kafka.py  service.py
python/common/grpc_stubs/: pyproject.toml
