[tool.poetry]
name = "protos"
version = "0.1.0"
description = ""
authors = ["chris220688 <13407893+kolitiri@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio-tools = "^1.35.0"
grpclib = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
