[tool.poetry]
name = "grpc_stubs"
version = "0.1.0"
description = ""
authors = ["chris220688 <13407893+kolitiri@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
protobuf = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
